[gd_scene load_steps=6 format=3 uid="uid://cnwfna3c7frxc"]

[ext_resource type="Script" path="res://Scripts/ball.gd" id="1_sowtj"]
[ext_resource type="Texture2D" uid="uid://dhxfgwhmfjqsm" path="res://Sprites/blocks.png" id="2_y8xl8"]
[ext_resource type="AudioStream" uid="uid://btjnopm1n8nix" path="res://Sounds/lever.ogg" id="3_o0knk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ngo51"]
radius = 16.0312

[sub_resource type="AtlasTexture" id="AtlasTexture_v7n6h"]
atlas = ExtResource("2_y8xl8")
region = Rect2(32, 128, 32, 32)

[node name="Ball" type="Area2D"]
script = ExtResource("1_sowtj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ngo51")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_v7n6h")

[node name="Timer" type="Timer" parent="."]

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_o0knk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
